--- a/app.json
+++ b/app.json
@@ -1,7 +1,30 @@
 {
   "pages": [
     "pages/home/home",
+    "pages/category/category",
     "pages/about/about"
   ],
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "window": {
+    "navigationBarBackgroundColor": "#ff5777",
+    "navigationBarTextStyle": "white",
+    "navigationBarTitleText": "happy的小程序",
+    "backgroundColor": "#eeeeee",
+    "backgroundTextStyle": "light",
+    "enablePullDownRefresh": false
+  },
+  "tabBar": {
+    "list": [{
+      "pagePath": "pages/home/home",
+      "text": "首页",
+      "iconPath": "assets/images/tabbar/home.png",
+      "selectedIconPath": "assets/images/tabbar/home_active.png"
+    }, {
+      "pagePath": "pages/category/category",
+      "text": "分类",
+      "iconPath": "assets/images/tabbar/category.png",
+      "selectedIconPath": "assets/images/tabbar/category_active.png"
+    }],
+    "selectedColor": "#ff5777"
+  }
 }
