--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/home/home",
+    "pages/category/category",
     "pages/about/about"
   ],
   "sitemapLocation": "sitemap.json"
