'组件化开发'

--- a/app.json
+++ b/app.json
@@ -3,5 +3,8 @@
     "pages/home/home",
     "pages/about/about"
   ],
+  "usingComponents": {
+    "my-cpn": "/components/my-cpn/my-cpn"
+  },
   "sitemapLocation": "sitemap.json"
 }
